@startuml

package "sledge-core" as core {

	hide members

	class ApplicationPackage
	interface PackageRepository

	package sledge.core.impl.servlets {
		hide members
		installer -- class SledgeInstallServlet
		class SledgeUninstallServlet
		class SledgeUploadServlet
		class SledgeConfigServlet
	}

	package io.sledge.core.api {
		hide members

		package installer {
			hide members
			interface Installer
			interface PackageConfigurer <|.. class SledgePackageConfigurer
		}

		package extractor {
			hide members
    		interface ApplicationPackageExtractor
    	}

    	package configuration {
    		hide members
    		interface DeploymentConfiguration
    		interface DeploymentConfigurationReader
    	}

    	package connectors {
    		hide members
    		interface PackageSourceConnector
    	}

	}

}

@enduml